# Flask-Postgres

./: .gitignore  404.html  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: mkdocs.yml  requirements.txt
docs/src/pages/: index.md
flask_postgres/: __init__.py  _compat.py  cli.py  config.py  exceptions.py  ops.py  types.py  utils.py
flask_postgres/cli/: main.py  types.py
tests/: conftest.py  test_cli_normal_app_config.py  test_types.py  test_utils.py
